--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,7 @@
 copyToPath=/var/www/bbb-mp4/video
 playbackFile=playback.html
+resolutionX=1280
+resolutionY=720
+displayChat=true
+bitrate=2500000
+mime-type=video/mp4; codecs="avc1.4d002a, aac"
